# rlnc-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.claude/commands/: read-docs.md
.claude/scripts/: gen-docs.sh
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/rlnc/: Cargo.toml
crates/rlnc/src/: decode.rs  lib.rs  matrix.rs
crates/rlnc/src/primitives/: packet.rs
docs/: book.toml
docs/src/: SUMMARY.md  security.md
examples/: broadcast.rs  multicast.rs
src/: commit.rs  common.rs  decode.rs  encode.rs  lib.rs  matrix.rs
src/primitives/: field.rs  galois.rs  mod.rs  packet.rs
